[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flextok"
version = "1.0.0"
description = "FlexTok: Resampling Images into 1D Token Sequences of Flexible Length"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "hydra-core",
    "torch>=2.5.0",
    "einops",
    "diffusers>=0.18.0.dev0",
    "mup",
    "huggingface_hub",
    "safetensors"
]

[project.urls]
"Homepage" = "https://flextok.epfl.ch"

[tool.setuptools.packages.find]
exclude = ["assets*", "notebooks*"]

[tool.wheel]
exclude = ["assets*", "notebooks*"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | messages
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["messages",]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "NUMERIC", "VISION", "DATA", "CONFIG", "MISC", "FIRSTPARTY", "LOCALFOLDER"]
known_numeric = ["torch", "tensorflow", "numpy", "pandas", "sklearn"]
known_vision = ["PIL", "torchvision", "timm", "fvcore"]
known_config = ["yaml", "hydra", "omegaconf"]
known_data = ["h5py", "wilds", "webdataset", "tensorflow_datasets"]
known_misc = ["wandb", "tqdm", "fsspec", "boto3", "ftfy", "braceexpand", "regex", "composer", "llmfoundry", "transformers"]

# mypy global options:

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/flextok"
python_version = "3.8"
plugins = "numpy.typing.mypy_plugin"
exclude = ["build", "tools",]

# mypy per-module options:

[[tool.mypy.overrides]]
module = [
    "torchvision.*",
    "diffusers.*",
    "webdataset.*",
    "datasets.*",
    "sklearn.*",
    "albumentations.*",
    "transformers.*",
    "timm.*",
    "tokenizers.*",
    "open_clip.*",
    "xformers.*",
    "fairscale.*",
    "mup",
    "mup.*",
    "detectron2.*",
]
ignore_missing_imports = true
